# depth-compositing

./: .gitignore  CMakeLists.txt  run_demo.sh
.github/workflows/: build.yml
src/: deep_compositor.cpp  deep_compositor.h  deep_image.cpp  deep_image.h  deep_merger.h  deep_pipeline.h  deep_reader.cpp  deep_reader.h  deep_writer.cpp  gui_main.cpp  main.cpp  temp.cpp  tester.cpp
src/tests/integration/: test_io_roundtrip.cpp
test_data/: README.md  generate_test_images.cpp
